tests/__snapshots__/feature-watch-single-test-file-is-changed-stderr.snap.txt
Error: Type is 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<number>().type.toBe<string>();
    |                         ~~~~~~~~~~
  4 | });
  5 | 

      at ./b-feature/__typetests__/isString.test.ts:3:25 ❭ is string?

